Add CTA button to landing page. Link to registration.

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -5,3 +5,4 @@ first_hackercamp_in_lithuania: The first and only hackercamp in Lithuania!
 follow_us: Follow us on 
 july: July
 on_blog: Blog
+register: Register
