--- a/locales/lt.yaml
+++ b/locales/lt.yaml
@@ -5,3 +5,4 @@ first_hackercamp_in_lithuania: Pirmas ir vienintelis hackercamp'as Lietuvoje!
 follow_us: Sekite naujienas
 july: Liepos
 on_blog: Bloge
+register: Registruotis
