--- a/locales/lt.yaml
+++ b/locales/lt.yaml
@@ -3,6 +3,6 @@ blog: Blogas
 contact_us: Turite idėjų, klausimų? Rašykite 
 first_hackercamp_in_lithuania: Pirmas ir vienintelis hackercamp'as Lietuvoje!
 follow_us: Sekite naujienas
-july: Liepos
+july: Liepa
 on_blog: Bloge
 register: Registruotis
