new text content in landing page

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -1,6 +1,6 @@
 and: and
 blog: Blog
-contact_us: Have ideas, suggestions or questions? Contact us
+contact_us: Have any ideas, suggestions or questions? Contact us at
 first_hackercamp_in_lithuania: The first and only hackercamp in Lithuania!
 follow_us: Follow us on 
 july: July
