--- a/locales/lt.yaml
+++ b/locales/lt.yaml
@@ -1,8 +1,8 @@
 and: ir
 blog: Blogas
-contact_us: Turite idėjų, klausimų? Rašykite 
+contact_us: Turi idėjų, klausimų? Rašyk
 first_hackercamp_in_lithuania: Pirmas ir vienintelis hackercamp'as Lietuvoje!
-follow_us: Sekite naujienas
+follow_us: Sek mūsų naujienas
 july: Liepa
 on_blog: Bloge
 register: Registruotis
